// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BannerCarousel /> renders banners carousel correctly 1`] = `
<Carousel
  activeIndex={0}
  interval={5000}
  keyboard={true}
  next={[Function]}
  pause="hover"
  previous={[Function]}
  slide={true}
>
  <CarouselItem
    appear={false}
    enter={true}
    exit={true}
    in={false}
    key="url test"
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    slide={true}
    tag="div"
    timeout={600}
    unmountOnExit={false}
  >
    <img
      alt="alt text test"
      src="url test"
    />
    <div
      className="carousel-caption d-none d-md-block"
    >
      <h1>
        tile test
      </h1>
      caption test
    </div>
  </CarouselItem>
  <CarouselControl
    direction="prev"
    directionText="Previous"
    onClickHandler={[Function]}
  />
  <CarouselControl
    direction="next"
    directionText="Next"
    onClickHandler={[Function]}
  />
</Carousel>
`;

exports[`<BannerCarousel /> renders banners, without "caption" 1`] = `
<Carousel
  activeIndex={0}
  interval={5000}
  keyboard={true}
  next={[Function]}
  pause="hover"
  previous={[Function]}
  slide={true}
>
  <CarouselItem
    appear={false}
    enter={true}
    exit={true}
    in={false}
    key="url test"
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    slide={true}
    tag="div"
    timeout={600}
    unmountOnExit={false}
  >
    <img
      alt="alt text test"
      src="url test"
    />
    <div
      className="carousel-caption d-none d-md-block"
    >
      <h1>
        tile test
      </h1>
    </div>
  </CarouselItem>
  <CarouselControl
    direction="prev"
    directionText="Previous"
    onClickHandler={[Function]}
  />
  <CarouselControl
    direction="next"
    directionText="Next"
    onClickHandler={[Function]}
  />
</Carousel>
`;

exports[`<BannerCarousel /> renders banners, without "title" & "caption" 1`] = `
<Carousel
  activeIndex={0}
  interval={5000}
  keyboard={true}
  next={[Function]}
  pause="hover"
  previous={[Function]}
  slide={true}
>
  <CarouselItem
    appear={false}
    enter={true}
    exit={true}
    in={false}
    key="url test"
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    slide={true}
    tag="div"
    timeout={600}
    unmountOnExit={false}
  >
    <img
      alt="alt text test"
      src="url test"
    />
  </CarouselItem>
  <CarouselControl
    direction="prev"
    directionText="Previous"
    onClickHandler={[Function]}
  />
  <CarouselControl
    direction="next"
    directionText="Next"
    onClickHandler={[Function]}
  />
</Carousel>
`;

exports[`<BannerCarousel /> renders banners, without "title" 1`] = `
<Carousel
  activeIndex={0}
  interval={5000}
  keyboard={true}
  next={[Function]}
  pause="hover"
  previous={[Function]}
  slide={true}
>
  <CarouselItem
    appear={false}
    enter={true}
    exit={true}
    in={false}
    key="url test"
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    slide={true}
    tag="div"
    timeout={600}
    unmountOnExit={false}
  >
    <img
      alt="alt text test"
      src="url test"
    />
    <div
      className="carousel-caption d-none d-md-block"
    >
      caption test
    </div>
  </CarouselItem>
  <CarouselControl
    direction="prev"
    directionText="Previous"
    onClickHandler={[Function]}
  />
  <CarouselControl
    direction="next"
    directionText="Next"
    onClickHandler={[Function]}
  />
</Carousel>
`;
